# collaborative-robotics-team3

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.sh
docs/: remote_setup.md
ros2_ws/: setup_env.bash
ros2_ws/src/interbotix/interbotix_xs_driver/src/: xs_driver.cpp
ros2_ws/src/interbotix/interbotix_xs_sdk/include/interbotix_xs_sdk/: xs_sdk_obj.hpp
ros2_ws/src/interbotix/interbotix_xs_sdk/src/: xs_sdk_obj.cpp
ros2_ws/src/tidybot_bringup/: CMakeLists.txt
ros2_ws/src/tidybot_bringup/config/: left_arm.yaml  left_arm_modes.yaml  right_arm.yaml  right_arm_pantilt.yaml
ros2_ws/src/tidybot_bringup/launch/: real.launch.py  robot.launch.py  sim.launch.py
ros2_ws/src/tidybot_bringup/scripts/: test_arms_real.py  test_base_real.py  test_full_robot.py  test_grippers_real.py
ros2_ws/src/tidybot_client/: CMakeLists.txt
ros2_ws/src/tidybot_control/: setup.py
ros2_ws/src/tidybot_control/tidybot_control/: dynamixel_bus_node.py  interbotix_arm_node.py
ros2_ws/src/tidybot_description/: CMakeLists.txt  meshes
ros2_ws/src/tidybot_description/urdf/: tidybot_wx250s.urdf.xacro
ros2_ws/src/tidybot_ik/: setup.py
ros2_ws/src/tidybot_network_bridge/: setup.cfg  setup.py
simulation/: README.md  __init__.py
simulation/assets/mujoco/: scene_wx250s.xml  tidybot_wx250s.xml  tidybot_wx250s_bimanual.xml
simulation/scripts/: drive_tidybot_wx250s.py
